# coze-studio

./: .gitignore
.github/workflows/: ci.yml  semantic-pull-request.yaml
backend/: go.mod  go.sum  main.go
backend/api/handler/coze/: conversation_service_test.go  message_service_test.go  upload_service.go  workflow_service_test.go
backend/api/router/coze/: api.go  middleware.go
backend/application/: application.go
backend/application/base/appinfra/: app_infra.go
backend/application/conversation/: openapi_agent_run.go
backend/application/singleagent/: single_agent.go
backend/application/upload/: icon.go
backend/application/workflow/: chatflow.go  workflow.go
backend/crossdomain/contract/crossworkflow/: crossworkflow.go
backend/crossdomain/contract/message/: message.go
backend/crossdomain/contract/upload/: upload.go
backend/domain/workflow/: component_interface.go
backend/pkg/parsex/: address.go
backend/types/consts/: consts.go
backend/types/ddl/: gen_orm_query.go
docker/: .env.debug.example  .env.example  docker-compose-debug.yml  docker-compose.yml
docker/atlas/: opencoze_latest_schema.hcl
docker/atlas/migrations/: atlas.sum
docker/volumes/clickhouse/: schema.sql
docker/volumes/mysql/: schema.sql
idl/upload/: upload.thrift
py_package/: pyproject.toml
py_package/browser_agent/: agent.py  browser.py  cdp.py  index.py  upload.py  utils.py
py_package/browser_agent/browser_use_custom/controller/: service.py
py_package/browser_agent/browser_use_custom/i18n/: update_translations.py
py_package/stream_helper/: schema.py
(+58 files in other folders)
